examples/datalog/21_query_features/17_filter_in_head.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_filter_head
Knowledge graph 'test_filter_head' created.
Switched to knowledge graph: test_filter_head
> .kg use test_filter_head
Switched to knowledge graph: test_filter_head
> +vals[(1,), (2,), (3,), (4,), (5,)].
Inserted 5 fact(s) into 'vals'.
> doubled_big(X, Y) :- vals(X), Y = X * 2, Y > 5.
Script error: Query execution failed: Unsafe rule: Atom { relation: "doubled_big", args: [Variable("X"), Variable("Y")] }. Variables ["Y"] in head do not appear in positive body atoms.
