examples/datalog/21_query_features/17_filter_in_head.dl
% Test: Filter applied after head computation
% Expected: Compute in head, filter in body
% Category: 21_query_features
% Priority: P2 - Query features

.kg create test_filter_head
.kg use test_filter_head

+vals[(1,), (2,), (3,), (4,), (5,)].

% Compute in head, filter by computed value
doubled_big(X, Y) :- vals(X), Y = X * 2, Y > 5.

?- doubled_big(X, Y).

.kg use default
.kg drop test_filter_head
